--- a/PushDansMaster.WPF/appsettings.json
+++ b/PushDansMaster.WPF/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Data Source=DESKTOP-V7GR8U6;Initial Catalog=PushDansMaster;Integrated Security=True"
+    "default": "Data Source=LAPTOP-ND267PP8;Initial Catalog=PushDansMaster;Integrated Security=True"
   },
   "APIURL": {
     "default": "https://localhost:44304/"
